add home var to nautilus shortcut

--- a/roles/pc/tasks/desktop_env/gnome/keybindings.yml
+++ b/roles/pc/tasks/desktop_env/gnome/keybindings.yml
@@ -134,7 +134,7 @@
       }
     - {
         key: '/org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom3/command',
-        value: 'nautilus /home/"{{ user }}"',
+        value: "'nautilus/{{ home }}'",
       }
 
 - name: gnome | keybindings | screenlock keybinding
