add git_config handler caller to tasks

--- a/roles/pc/tasks/main.yml
+++ b/roles/pc/tasks/main.yml
@@ -1,5 +1,5 @@
+- include_tasks: system_setup/main.yml
 - include_tasks: desktop_env/gnome/powersettings.yml
-- include_tasks: system_setup/tweaks.yml
 - include_tasks: desktop_env/gnome/keybindings.yml
 
 ## install software
@@ -18,3 +18,5 @@
 - import_tasks: software/grafana.yml
 - import_tasks: software/code.yml
 - import_tasks: software/net-tools.yml
+- import_tasks: software/termius.yml
+- import_tasks: software/gnome-pop-shell.yml
