--- a/roles/pc/tasks/main.yml
+++ b/roles/pc/tasks/main.yml
@@ -1,9 +1,12 @@
+## general configs
+
 - include_tasks: system_setup/main.yml
 - include_tasks: desktop_env/gnome/powersettings.yml
 - include_tasks: desktop_env/gnome/keybindings.yml
 - include_tasks: dotfiles/main.yml
 
 ## install software
+
 - import_tasks: software/bashtop.yml
 - import_tasks: software/docker.yml
 - import_tasks: software/docker-c.yml
