--- a/roles/pc/tasks/software/prometheus-node-exporter.yml
+++ b/roles/pc/tasks/software/prometheus-node-exporter.yml
@@ -3,10 +3,4 @@
   package:
     name: prometheus-node-exporter
     state: latest
-
-- name: start prometheus-node-exporter service
-  tags: prometheus-node-exporter, service
-  service:
-    name: prometheus-node-exporter
-    state: started
-    enabled: yes
+  notify: start prometheus-node-exporter service
