--- a/roles/pc/tasks/main.yml
+++ b/roles/pc/tasks/main.yml
@@ -24,4 +24,5 @@
 - import_tasks: software/net-tools.yml
 - import_tasks: software/termius.yml
 - import_tasks: software/gnome-pop-shell.yml
+- import_tasks: software/fonts.yml
 - import_tasks: software/oh-my-zsh.yml
