--- a/roles/pc/tasks/system_setup/main.yml
+++ b/roles/pc/tasks/system_setup/main.yml
@@ -34,3 +34,15 @@
   community.general.ufw:
     state: enabled
     policy: reject
+
+- name: Font Meslo Nerd Font P10k
+  tags: fonts, meslo
+  package:
+    name: ttf-meslo-nerd-font-powerlevel10k
+    state: latest
+
+- name: Font Fire code Nerd Font
+  tags: fonts, fira code
+  package:
+    name: ttf-firacode-nerd
+    state: latest
