--- a/roles/pc/tasks/desktop_env/gnome/keybindings.yml
+++ b/roles/pc/tasks/desktop_env/gnome/keybindings.yml
@@ -1,4 +1,4 @@
-- name: gnome | keybindings | disable default browser key binding
+- name: gnome | keybindings | disable default key bindings
   tags: gnome,keybindings
   dconf:
     key: "{{ item.key }}"
@@ -8,58 +8,34 @@
         key: "/org/gnome/settings-daemon/plugins/media-keys/www",
         value: "@as []",
       }
-
-- name: gnome | keybindings | disable default file manager binding
-  tags: gnome,keybindings
-  dconf:
-    key: "{{ item.key }}"
-    value: "{{ item.value }}"
-  with_items:
     - {
         key: "/org/gnome/settings-daemon/plugins/media-keys/home",
         value: "@as []",
       }
-
-- name: gnome | keybindings | disable default email client binding
-  tags: gnome,keybindings
-  dconf:
-    key: "{{ item.key }}"
-    value: "{{ item.value }}"
-  with_items:
     - {
         key: "/org/gnome/settings-daemon/plugins/media-keys/email",
         value: "@as []",
       }
-
-- name: gnome | keybindings | disable default terminal key binding
-  tags: gnome,keybindings
-  dconf:
-    key: "{{ item.key }}"
-    value: "{{ item.value }}"
-  with_items:
     - {
         key: "/org/gnome/settings-daemon/plugins/media-keys/terminal",
         value: "@as []",
       }
-
-- name: gnome | keybindings | disable default screenlock key binding
-  tags: gnome,keybindings
-  dconf:
-    key: "{{ item.key }}"
-    value: "{{ item.value }}"
-  with_items:
     - {
         key: "/org/gnome/settings-daemon/plugins/media-keys/screensaver",
         value: "@as []",
       }
 
+
+
 - name: gnome | keybindings | set custom-keybindings
+  become_user: "{{ user }}"
   tags: gnome,keybindings
   dconf:
     key: "/org/gnome/settings-daemon/plugins/media-keys/custom-keybindings"
     value: "['/org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom0/', '/org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom1/', '/org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom2/', '/org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom3/', '/org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom4/', '/org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom5/', '/org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom6/']"
 
 - name: gnome | keybindings | set terminal keybinding
+  become_user: "{{ user }}"
   tags: gnome,keybindings
   dconf:
     key: "{{ item.key }}"
@@ -79,6 +55,7 @@
       }
 
 - name: gnome | keybindings | set screenshot keybinding
+  become_user: "{{ user }}"
   tags: gnome,keybindings
   dconf:
     key: "{{ item.key }}"
@@ -98,6 +75,7 @@
       }
 
 - name: gnome | keybindings | pavu control keybinding
+  become_user: "{{ user }}"
   tags: gnome,keybindings
   dconf:
     key: "{{ item.key }}"
@@ -117,6 +95,7 @@
       }
 
 - name: gnome | keybindings | nautilus home keybinding
+  become_user: "{{ user }}"
   vars:
     user: "{{ ansible_env.SUDO_USER }}"
   tags: gnome,keybindings
@@ -138,6 +117,7 @@
       }
 
 - name: gnome | keybindings | screenlock keybinding
+  become_user: "{{ user }}"
   tags: gnome,keybindings
   dconf:
     key: "{{ item.key }}"
