--- a/roles/pc/tasks/system_setup/main.yml
+++ b/roles/pc/tasks/system_setup/main.yml
@@ -1,6 +1,10 @@
-- name: Create a symlink for snap
-  tags: snap, snap setup, symlink
-  ansible.builtin.shell: ln -s /var/lib/snapd/snap /snap
+- name: Create a symbolic link for snap
+  file:
+    src: "/var/lib/snapd/snap"
+    dest: "/snap"
+    owner: "{{ user }}"
+    group: "{{ user }}"
+    state: link
 
 - name: Config default pamac settings
   tags: system, pamac
