--- a/roles/pc/tasks/dotfiles/main.yml
+++ b/roles/pc/tasks/dotfiles/main.yml
@@ -11,12 +11,13 @@
     dest: "{{ item.dest }}"
     owner: "{{ user }}"
     group: "{{ user }}"
-    mode: 0777
+    mode: 0764
   with_items:
     - { file_name: ".gitconfig", dest: "{{ home }}" }
     - { file_name: ".scripts", dest: "{{ home }}" }
     - { file_name: "kitty", dest: "{{ home }}/.config/" }
-    - { file_name: ".p10k.zsh", dest: "{{ home }}"}
+    - { file_name: ".p10k.zsh", dest: "{{ home }}" }
+    - { file_name: ".vimrc", dest: "{{ home }}" }
   notify: setup git config
 
 - name: Setup desktop file on autostart dir
@@ -26,5 +27,5 @@
     dest: "{{ home }}/.config/autostart/"
     owner: "{{ user }}"
     group: "{{ user }}"
-    mode: 0777
+    mode: 0764
   notify: config autostart desktopfile
