add tasks for setup containers on main.yml

--- a/roles/pc/tasks/main.yml
+++ b/roles/pc/tasks/main.yml
@@ -30,3 +30,9 @@
 - import_tasks: software/vagrant.yml
 - import_tasks: software/bat.yml
 - import_tasks: software/netdata.yml
+
+## containers
+
+- import_tasks: containers/glances.yml
+- import_tasks: containers/portainer_agent.yml
+- import_tasks: containers/watchtower.yml
