--- a/local.yml
+++ b/local.yml
@@ -21,6 +21,7 @@
   vars:
     home: "/home/{{ ansible_env.SUDO_USER }}"
     user: "{{ ansible_env.SUDO_USER }}"
+    ipaddr: "{{ ansible_default_ipv4.address }}"
   vars_prompt:
     - name: git_username
       prompt: git config username
