--- a/roles/pc/tasks/software/docker.yml
+++ b/roles/pc/tasks/software/docker.yml
@@ -5,5 +5,6 @@
     state: latest
   notify: "{{ item }}"
   loop:
+    - start docker service
     - ensure group docker exists
     - add user to docker group
