add task to flush handlers

--- a/roles/pc/tasks/software/docker.yml
+++ b/roles/pc/tasks/software/docker.yml
@@ -8,3 +8,6 @@
     - start docker service
     - ensure group docker exists
     - add user to docker group
+
+- name: Flush handlers
+  meta: flush_handlers
