--- a/roles/pc/handlers/steam.yml
+++ b/roles/pc/handlers/steam.yml
@@ -1,10 +1,10 @@
-- name: Create a directory if it does not exist
+- name: create the dir for eg-proton
   ansible.builtin.file:
   path: "{{ home }}/.steam/root/compatibilitytools.d"
     state: directory
     mode: '0755'
 
-- name: Get proton-ge latest tag
+- name: get proton-ge latest tag
   github_release:
     user: GloriousEggroll
     repo: proton-ge-custom
