--- a/roles/pc/tasks/software/steam.yml
+++ b/roles/pc/tasks/software/steam.yml
@@ -3,7 +3,7 @@
   package:
     name: steam
     state: latest
-  notify: {{ item }}
+  notify: "{{ item }}"
   loop:
     - create the dir for eg-proton
     - get proton-ge latest tag
