--- a/roles/pc/handlers/steam.yml
+++ b/roles/pc/handlers/steam.yml
@@ -17,5 +17,5 @@
 - name: install proton ge
   ansible.builtin.unarchive:
     src: "https://github.com/GloriousEggroll/proton-ge-custom/releases/download/{{ proton_ge_latest['tag'] }}/{{ proton_ge_latest['tag']}}.tar.gz"
-    dest: "{{ home }}"/.steam/root/compatibilitytools.d
+    dest: "{{ home }}/.steam/root/compatibilitytools.d"
     remote_src: yes
